[package]
name = "tradfri-rs"
version = "0.1.0"
edition = "2021"
description = "Coap client wrapper for controlling IKEA lightbulbs."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json="1"
serde_repr = "0.1"
